<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PassMaker Mobile</string>
    <string name="generatelabel">Generate Password</string>
    <string name="optionslabel">Password Options</string>
    <string name="skiplabel">Skip Animation</string>
    <string name="workingtext">Generating Password...</string>
    <string name="passworddisplay">Password</string>
    <string name="minlengthtext">Minimum Length</string>
    <string name="minlengthprompt">Enter the minimum password length:</string>
    <string name="minlengthsummary">The minimum password length</string>
    <string name="maxlengthtext">Maximum Length</string>
    <string name="maxlengthprompt">Enter the maximum password length</string>
    <string name="maxlengthsummary">The maximum password length</string>
    <string name="uppercasetext">Use Uppercase</string>
    <string name="uppercasesummary">Check this to generate passwords with uppercase letters</string>
    <string name="numberstext">Use Numbers</string>
    <string name="numberssummary">Check this to generate passwords with numbers</string>
    <string name="viewsavedbutton">My Passwords</string>
    <string name="savebutton">Save Password</string>
    <string name="listitemdelete">Remove</string>
    <string name="ctxcopy">Copy to Clipboard</string>
    <string name="ctxremove">Remove</string>
    <string name="savedlistheader">My Saved Passwords</string>

</resources>